# A1-file-explorer

./: CMakeLists.txt  README.md  filex  main.cpp  main.cpp:Zone.Identifier
